test/parser/Queries/syntax_errors/fail_K-ForExprPositionalVar-9.xq
(:**********foo*** where ********************** for  $ **************** where ***:)
(:foo Test: K-ForExprPositionalVar-9     for      ne               ne    :)
(: Written by: Frans          where         eq     let  foo       :)
(:Date: foo ne     let         $            eq   ne   :foo)
 eq (: Purpose: Verify that the position is properly computed  eq for fn:string-to-codepoints(). :)
 ne (:**************** let **foo************************** eq ****** eq ****:
deep-equal((1, 2, 3), let for $i at $pin ("abc") return $p)